--- a/swift.ui
+++ b/swift.ui
@@ -1,14 +1,11 @@
 import SwiftUI
 import SceneKit
 
-struct ContentView: View {
-    var body: some View {
-        CarGameView()
-            .edgesIgnoringSafeArea(.all)
-    }
-}
+struct GameView: UIViewRepresentable {
+    let playerName: String
+    let carType: String
+    let driverType: String
 
-struct CarGameView: UIViewRepresentable {
     func makeUIView(context: Context) -> SCNView {
         let view = SCNView()
         view.scene = SCNScene()
@@ -16,131 +13,100 @@ struct CarGameView: UIViewRepresentable {
         view.showsStatistics = true
         view.backgroundColor = .black
 
-        let scene = view.scene!
-        context.coordinator.setupScene(scene: scene)
+        context.coordinator.setup(
+            scene: view.scene!,
+            carType: carType,
+            driverType: driverType
+        )
 
         view.delegate = context.coordinator
         view.isPlaying = true
-
         return view
     }
 
     func updateUIView(_ uiView: SCNView, context: Context) {}
 
-    func makeCoordinator() -> Coordinator {
-        Coordinator()
-    }
+    func makeCoordinator() -> Coordinator { Coordinator() }
 
     class Coordinator: NSObject, SCNSceneRendererDelegate {
-        var carNode = SCNNode()
+        var car = SCNNode()
         var cameraNode = SCNNode()
 
-        var velocity: Float = 0
+        var speed: Float = 0
         var steering: Float = 0
 
-        let maxSpeed: Float = 20
-        let acceleration: Float = 10
-        let friction: Float = 4
-        let steeringSpeed: Float = 2
+        var maxSpeed: Float = 40
+        var accel: Float = 20
+        var grip: Float = 1
 
-        var keys: Set<String> = []
+        func setup(scene: SCNScene, carType: String, driverType: String) {
+            if carType == "Sport" { maxSpeed = 55; accel = 22; grip = 0.9 }
+            if carType == "Muscle" { maxSpeed = 45; accel = 26; grip = 0.8 }
+            if carType == "Kart" { maxSpeed = 30; accel = 16; grip = 1.2 }
 
-        func setupScene(scene: SCNScene) {
-            // Ground
-            let ground = SCNFloor()
-            ground.reflectivity = 0
-            let groundNode = SCNNode(geometry: ground)
-            groundNode.geometry?.firstMaterial?.diffuse.contents = UIColor.darkGray
-            scene.rootNode.addChildNode(groundNode)
+            if driverType == "Aggressive" { grip *= 0.8 }
+            if driverType == "Smooth" { grip *= 1.1 }
 
-            // Car body
+            let floor = SCNFloor()
+            floor.reflectivity = 0
+            let floorNode = SCNNode(geometry: floor)
+            floorNode.geometry?.firstMaterial?.diffuse.contents = UIColor.darkGray
+            scene.rootNode.addChildNode(floorNode)
+
             let body = SCNBox(width: 1.2, height: 0.4, length: 2.0, chamferRadius: 0.1)
             body.firstMaterial?.diffuse.contents = UIColor.red
-            carNode = SCNNode(geometry: body)
-            carNode.position = SCNVector3(0, 0.3, 0)
-            scene.rootNode.addChildNode(carNode)
+            car = SCNNode(geometry: body)
+            car.position = SCNVector3(0, 0.3, 0)
+            scene.rootNode.addChildNode(car)
 
-            // Camera
-            let camera = SCNCamera()
-            cameraNode.camera = camera
+            let cam = SCNCamera()
+            cameraNode.camera = cam
             cameraNode.position = SCNVector3(0, 3, 8)
             scene.rootNode.addChildNode(cameraNode)
 
-            // Light
             let light = SCNLight()
             light.type = .directional
             let lightNode = SCNNode()
             lightNode.light = light
             lightNode.eulerAngles = SCNVector3(-.pi/3, 0, 0)
             scene.rootNode.addChildNode(lightNode)
-
-            // Add obstacles
-            for i in -3...3 {
-                let box = SCNBox(width: 1, height: 1, length: 1, chamferRadius: 0)
-                let node = SCNNode(geometry: box)
-                node.position = SCNVector3(Float(i) * 4, 0.5, -10)
-                node.geometry?.firstMaterial?.diffuse.contents = UIColor.blue
-                scene.rootNode.addChildNode(node)
-            }
-
-            // Keyboard notifications
-            NotificationCenter.default.addObserver(self, selector: #selector(keyDown(_:)), name: UIResponder.keyboardDidShowNotification, object: nil)
         }
-
-        @objc func keyDown(_ notification: Notification) {}
 
         func renderer(_ renderer: SCNSceneRenderer, updateAtTime time: TimeInterval) {
-            handleInput()
-            updateCar()
-            updateCamera()
+            let dt: Float = 1/60
+
+            let throttle: Float = 0
+            let steerInput: Float = 0
+
+            speed = move(speed, toward: throttle * maxSpeed, by: accel * dt)
+            speed = max(min(speed, maxSpeed), -maxSpeed)
+
+            let moveVec = SCNVector3(
+                -sin(car.eulerAngles.y) * speed * dt,
+                0,
+                -cos(car.eulerAngles.y) * speed * dt
+            )
+            car.position.x += moveVec.x
+            car.position.z += moveVec.z
+
+            car.eulerAngles.y += steerInput * (speed/maxSpeed) * grip * dt * 2
+
+            let camTarget = car.position + SCNVector3(0,3,8)
+            cameraNode.position = cameraNode.position.lerp(to: camTarget, t: 0.1)
+            cameraNode.look(at: car.position)
         }
 
-        func handleInput() {
-            #if targetEnvironment(macCatalyst)
-            if keys.contains("w") { velocity += acceleration * 0.02 }
-            if keys.contains("s") { velocity -= acceleration * 0.02 }
-            if keys.contains("a") { steering += steeringSpeed * 0.02 }
-            if keys.contains("d") { steering -= steeringSpeed * 0.02 }
-            #endif
-        }
-
-        func updateCar() {
-            // Clamp speed
-            velocity = max(min(velocity, maxSpeed), -maxSpeed)
-
-            // Apply friction
-            if velocity > 0 {
-                velocity -= friction * 0.02
-                if velocity < 0 { velocity = 0 }
-            }
-            if velocity < 0 {
-                velocity += friction * 0.02
-                if velocity > 0 { velocity = 0 }
-            }
-
-            // Move forward
-            let forward = carNode.presentation.worldFront
-            carNode.position.x += forward.x * velocity * 0.02
-            carNode.position.z += forward.z * velocity * 0.02
-
-            // Steering
-            carNode.eulerAngles.y += steering * 0.02
-            steering *= 0.9
-        }
-
-        func updateCamera() {
-            let targetPos = carNode.position + SCNVector3(0, 3, 8)
-            cameraNode.position = cameraNode.position.lerp(to: targetPos, t: 0.1)
-            cameraNode.look(at: carNode.position)
+        func move(_ current: Float, toward target: Float, by maxDelta: Float) -> Float {
+            if abs(target - current) <= maxDelta { return target }
+            return current + (target > current ? maxDelta : -maxDelta)
         }
     }
 }
 
 extension SCNVector3 {
     static func + (a: SCNVector3, b: SCNVector3) -> SCNVector3 {
-        SCNVector3(a.x + b.x, a.y + b.y, a.z + b.z)
+        SCNVector3(a.x+b.x, a.y+b.y, a.z+b.z)
     }
-
     func lerp(to: SCNVector3, t: Float) -> SCNVector3 {
         SCNVector3(
             x + (to.x - x) * t,
